build/log/idf_py_stdout_output_6337
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/build/bootloader && /home/dhruv/.espressif/python_env/idf6.1_py3.14_env/bin/python /home/dhruv/softwares/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/build/bootloader/bootloader.bin
Bootloader binary size 0x6640 bytes. 0x9c0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/pwm_driver_main.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/pwm_driver_main.c.obj 
/home/dhruv/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-4811-gfce70533fa\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/build/config -I/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main -I/home/dhruv/softwares/esp-idf/components/esp_libc/platform_include -I/home/dhruv/softwares/esp-idf/components/freertos/config/include -I/home/dhruv/softwares/esp-idf/components/freertos/config/include/freertos -I/home/dhruv/softwares/esp-idf/components/freertos/config/xtensa/include -I/home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/dhruv/softwares/esp-idf/components/freertos/esp_additions/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/include/soc -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/ldo/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/debug_probe/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/etm/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/power_supply/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/modem/include -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dhruv/softwares/esp-idf/components/esp_hw_support/port/esp32/include -I/home/dhruv/softwares/esp-idf/components/heap/include -I/home/dhruv/softwares/esp-idf/components/heap/tlsf -I/home/dhruv/softwares/esp-idf/components/log/include -I/home/dhruv/softwares/esp-idf/components/soc/include -I/home/dhruv/softwares/esp-idf/components/soc/esp32 -I/home/dhruv/softwares/esp-idf/components/soc/esp32/include -I/home/dhruv/softwares/esp-idf/components/soc/esp32/register -I/home/dhruv/softwares/esp-idf/components/hal/platform_port/include -I/home/dhruv/softwares/esp-idf/components/hal/esp32/include -I/home/dhruv/softwares/esp-idf/components/hal/include -I/home/dhruv/softwares/esp-idf/components/esp_rom/include -I/home/dhruv/softwares/esp-idf/components/esp_rom/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/dhruv/softwares/esp-idf/components/esp_rom/esp32 -I/home/dhruv/softwares/esp-idf/components/esp_common/include -I/home/dhruv/softwares/esp-idf/components/esp_system/include -I/home/dhruv/softwares/esp-idf/components/esp_system/port/soc -I/home/dhruv/softwares/esp-idf/components/esp_system/port/include/private -I/home/dhruv/softwares/esp-idf/components/esp_stdio/include -I/home/dhruv/softwares/esp-idf/components/xtensa/esp32/include -I/home/dhruv/softwares/esp-idf/components/xtensa/include -I/home/dhruv/softwares/esp-idf/components/xtensa/deprecated_include -I/home/dhruv/softwares/esp-idf/components/esp_hal_gpio/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_gpio/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_usb/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_pmu/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_pmu/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_regi2c/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_regi2c/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_ana_conv/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_dma/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_i2s/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_i2s/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_driver_ledc/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_ledc/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_ledc/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_driver_uart/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_uart/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_uart/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_driver_gpio/include -I/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/managed_components/espressif__led_strip/include -I/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/managed_components/espressif__led_strip/interface -I/home/dhruv/softwares/esp-idf/components/esp_driver_rmt/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_rmt/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_rmt/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_driver_spi/include -I/home/dhruv/softwares/esp-idf/components/esp_pm/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_gpspi/include -I/home/dhruv/softwares/esp-idf/components/esp_hal_gpspi/esp32/include -I/home/dhruv/softwares/esp-idf/components/esp_driver_dma/include @"/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver=. -fmacro-prefix-map=/home/dhruv/softwares/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/pwm_driver_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/pwm_driver_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/pwm_driver_main.c.obj -c /home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c
In file included from /home/dhruv/softwares/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:21,
                 from /home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1531,
                 from /home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c:11:
/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c: In function 'button_isr_handler':
/home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1134:31: error: passing argument 1 of 'xQueueGenericSendFromISR' makes pointer from integer without a cast [-Wint-conversion]
 1134 |     xQueueGenericSendFromISR( ( xQueue ), ( pvItemToQueue ), ( pxHigherPriorityTaskWoken ), queueSEND_TO_BACK )
      |                               ^~~~~~~~~~
      |                               |
      |                               long unsigned int
/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c:75:8: note: in expansion of macro 'xQueueSendFromISR'
   75 |        xQueueSendFromISR(button_dealy, &gpio_num, NULL);
      |        ^~~~~~~~~~~~~~~~~
/home/dhruv/softwares/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/queue.h:1203:52: note: expected 'QueueHandle_t' {aka 'struct QueueDefinition *'} but argument is of type 'long unsigned int'
 1203 | BaseType_t xQueueGenericSendFromISR( QueueHandle_t xQueue,
      |                                      ~~~~~~~~~~~~~~^~~~~~
/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c: In function 'button_task':
/home/dhruv/softwares/esp-idf/examples/esp_driver_design/pwm_driver/main/pwm_driver_main.c:95:6: warning: unused variable 'pin' [-Wunused-variable]
   95 |  int pin;
      |      ^~~
ninja: build stopped: subcommand failed.
